# sqlite3.gd-auto3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  sqlite3_full_functions.txt  sqlite3_functions.txt  vcpkg-configuration.json  vcpkg.json
.github/: renovate.json5
.github/workflows/: main.yml  release.yml  retry-workflow.yml
demo/: demo.gd  demo.gd.uid  demo.tscn  example.gd  example.gd.uid  example.stp.import  example.tscn  export_presets.cfg  icon.png.import  project.godot
demo/addons/build123d.gd/: build123d.gd.gdextension
demo/addons/build123d.gd-importer/: cad_resource.gd  cad_resource.gd.uid  importer.gd  importer.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
demo/addons/sqlite3.gd/: gdext.gdextension  gdext.gdextension.uid  sqlite3.gd.gdextension
demo/tests/: test_advanced.gd  test_advanced.gd.uid  test_basic.gd  test_basic.gd.uid  test_edge_cases.gd  test_edge_cases.gd.uid  test_performance.gd  test_performance.gd.uid
doc_classes/: SQLite3.xml  SQLite3Backup.xml  SQLite3Blob.xml  SQLite3Database.xml  SQLite3ResultSet.xml  SQLite3Statement.xml
src/: SQLite3.cpp  SQLite3Blob.cpp  SQLite3Database.cpp  SQLite3ResultSet.cpp  SQLite3ResultSet.h  SQLite3Statement.cpp  SQLite3Statement.h  register_types.cpp  register_types.h
src/ai_bindings/: ocgd_AdvancedMeshExporter.cpp  ocgd_AdvancedMeshExporter.hxx  ocgd_BRepMesh_IncrementalMesh.cpp  ocgd_BRepMesh_IncrementalMesh.hxx  ocgd_BooleanOperations.cpp  ocgd_BooleanOperations.hxx  ocgd_CADFileImporter.cpp  ocgd_CADFileImporter.hxx  ocgd_EnhancedNormals.cpp  ocgd_EnhancedNormals.hxx  ocgd_IGESReader.cpp  ocgd_IGESReader.hxx  ocgd_MeshDataExtractor.cpp  ocgd_MeshDataExtractor.hxx  ocgd_PrimitiveShapes.cpp  ocgd_PrimitiveShapes.hxx  ocgd_STEPCAFControl_Reader.cpp  ocgd_STEPCAFControl_Reader.hxx  ocgd_STLExporter.cpp  ocgd_STLExporter.hxx  ocgd_ShapeAnalyzer.cpp  ocgd_ShapeAnalyzer.hxx  ocgd_SurfaceUtils.cpp  ocgd_SurfaceUtils.hxx  ocgd_TopExp_Explorer.cpp  ocgd_TopExp_Explorer.hxx  ocgd_TopoDS_Shape.cpp  ocgd_TopoDS_Shape.hxx  ocgd_TopologyAnalyzer.cpp  ocgd_TopologyAnalyzer.hxx  register_types.cpp  register_types.h
src/ai_bindings2/: gd_AIS_NavigationMode.cpp  gd_AIS_NavigationMode.hxx  gd_AIS_NavigationMode.xml  gd_AIS_SelectionScheme.cpp  gd_AIS_SelectionScheme.hxx  gd_AIS_SelectionScheme.xml  gd_Aspect_FillMethod.cpp  gd_Aspect_FillMethod.hxx  gd_Aspect_FillMethod.xml  gd_Aspect_XRActionType.cpp  gd_Aspect_XRActionType.hxx  gd_Aspect_XRActionType.xml  gd_CDF_SubComponentStatus.cpp  gd_CDF_SubComponentStatus.hxx  gd_CDF_SubComponentStatus.xml  gd_Graphic3d_NameOfTexturePlane.cpp  gd_Graphic3d_NameOfTexturePlane.hxx  gd_Graphic3d_NameOfTexturePlane.xml  gd_Interface_Statics.cpp  gd_Interface_Statics.hxx  gd_Interface_Statics.xml  gd_OSD_LoadMode.cpp  gd_OSD_LoadMode.hxx  gd_OSD_LoadMode.xml  gd_OSD_WhoAmI.cpp  gd_OSD_WhoAmI.hxx  gd_OSD_WhoAmI.xml  gd_Standard_WarningsDisable.cpp  gd_Standard_WarningsDisable.hxx  gd_Standard_WarningsDisable.xml  gd_Storage_OpenMode.cpp  gd_Storage_OpenMode.hxx  gd_Storage_OpenMode.xml  gd_TDF_LabelNodePtr.cpp  gd_TDF_LabelNodePtr.hxx  gd_TDF_LabelNodePtr.xml  gd_TopOpeBRepDS_Config.cpp  gd_TopOpeBRepDS_Config.hxx  gd_TopOpeBRepDS_Config.xml  gd_V3d_StereoDumpOptions.cpp  (+7 more)
src/ai_bindings3/: OCCAx1.cpp  OCCAx1.hxx  OCCAx2.cpp  OCCAx2.hxx  OCCAx3.cpp  OCCAx3.hxx  OCCBox.cpp  OCCBox.hxx  OCCCirc.cpp  OCCCirc.hxx  OCCCommon.cpp  OCCCommon.hxx  OCCCompSolid.cpp  OCCCompSolid.hxx  OCCCompound.cpp  OCCCompound.hxx  OCCConeShape.cpp  OCCConeShape.hxx  OCCCut.cpp  OCCCut.hxx  OCCCylinder.cpp  OCCCylinder.hxx  OCCCylinderShape.cpp  OCCCylinderShape.hxx  OCCDir.cpp  OCCDir.hxx  OCCEdge.cpp  OCCEdge.hxx  OCCElips.cpp  OCCElips.hxx  OCCFace.cpp  OCCFace.hxx  OCCFuse.cpp  OCCFuse.hxx  OCCGeomCircle.cpp  OCCGeomCircle.hxx  OCCLin.cpp  OCCLin.hxx  OCCMakeEdge.cpp  OCCMakeEdge.hxx  (+36 more)
src/ai_bindings4/: ocgd_brep_reader.cpp  ocgd_brep_reader.h  ocgd_brep_reader.xml  ocgd_brep_writer.cpp  ocgd_brep_writer.h  ocgd_brep_writer.xml  ocgd_glb_exporter.cpp  ocgd_glb_exporter.h  ocgd_glb_exporter.xml  ocgd_iges_reader.cpp  ocgd_iges_reader.h  ocgd_iges_reader.xml  ocgd_iges_writer.cpp  ocgd_iges_writer.h  ocgd_iges_writer.xml  ocgd_measurement_tool.cpp  ocgd_measurement_tool.h  ocgd_measurement_tool.xml  ocgd_shape.cpp  ocgd_shape.h  ocgd_shape.xml  ocgd_step_reader.cpp  ocgd_step_reader.h  ocgd_step_reader.xml  ocgd_step_writer.cpp  ocgd_step_writer.h  ocgd_step_writer.xml  ocgd_topology_explorer.cpp  ocgd_topology_explorer.h  ocgd_topology_explorer.xml  register_types.cpp  register_types.h
src/sqlite3_bindings/: SQLite3.cpp  SQLite3Backup.cpp  SQLite3Backup.h  SQLite3Binding.h  SQLite3Blob.h  SQLite3Database.cpp  SQLite3Database.h  register_types.cpp  register_types.h
src/step_importer/: register_types.cpp  register_types.h  step_iges_brep_importer.cpp  step_iges_brep_importer.h
tests/: CMakeLists.txt  test_sqlite3.cpp
vcpkg_ports/build123d-gd/: portfile.cmake
vcpkg_ports/gdext/: portfile.cmake  vcpkg.json
vcpkg_ports/icu/: .gitignore  portfile.cmake  use-slash-in-pkgdata-for-mingw-cross.patch  vcpkg.json
vcpkg_ports/sqlite3/: portfile.cmake  vcpkg.json
vcpkg_ports/sqlite3-gd/: portfile.cmake  vcpkg.json
vcpkg_triplets/: _allow-multiple-definition.cmake  arm-mingw-static.cmake  arm64-linux.cmake  arm64-mingw-static.cmake  arm64-windows-static.cmake  wasm32-emscripten-pic.cmake  wasm32-emscripten-threads.cmake  wasm32-emscripten.cmake  x64-mingw-static.cmake  x64-windows-static.cmake  x86-mingw-static.cmake  x86-windows-static.cmake
